# train_dispatching_benchmark

./: .gitignore  LICENSE  README.md  bench_env.sh  pyproject.toml
data/: README.md  appear-test-4.dzn  appear-test.dzn  instances_endtimes_all.csv  instances_endtimes_appear-cp2025.csv  instances_endtimes_cp2025.csv  instances_endtimes_icaps21.csv  instances_endtimes_reverse-cp2025.csv  instances_endtimes_warmstart_all.csv  instances_endtimes_warmstart_cp2025.csv  instances_endtimes_warmstart_icaps21.csv  instances_makespan_all.csv  instances_makespan_appear-cp2025.csv  instances_makespan_cp2025.csv  instances_makespan_icaps21.csv  instances_makespan_reverse-cp2025.csv  instances_makespan_warmstart_all.csv  instances_makespan_warmstart_cp2025.csv  instances_makespan_warmstart_icaps21.csv  instances_sat_all.csv  instances_sat_appear-cp2025.csv  instances_sat_cp2025.csv  instances_sat_icaps21.csv  instances_sat_reverse-cp2025.csv
models/: README.md  appear-instance-generator.mzn  assert-tests.mzn  def-print.mzn  helpers.mzn  instance-generator-helpers.mzn  pddl-print.mzn  pretty-print.mzn  reverse-instance-generator.mzn  search-fo-prio.mzn  search-prio.mzn  search-std.mzn  solve_endtimes.mzn  solve_makespan.mzn  solve_sat.mzn  train-sched.mzn
results/: best_all.csv  planner_all.csv  plot_solver1_endtimes_all.pgf  plot_solver1_makespan_all.pgf  plot_solver1_satendsum_all.pgf  plot_solver1_satmakespan_all.pgf  solutions_sat_all.csv  solutions_sat_appear-cp2025.csv  solutions_sat_reverse-cp2025.csv  solutions_sat_reverse-cp2025_big.csv  statistics_endtimes_all.csv  (+10 more)
(+583 files in other folders)
